Align issues fixed on some events

--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -11,6 +11,7 @@ Welcome to your new app.
                         Name="myInputName"
                         Visible="true"
                         ReadOnly="false"
+                        PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="2"
                         InitialValue="false"
                         CalendarType="Calendar.DualModeJalaliDefault"
