ReadOnly name changed to Disabled

--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -10,10 +10,10 @@
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="true"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="-5"
-                        InitialValue="false"
+                        InitialValue="true"
                         CalendarType="Calendar.DualModeJalaliDefault"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
@@ -32,7 +32,7 @@
                         @bind-Value="_variable2"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="25"
                         InitialValue="false"
@@ -55,7 +55,7 @@
                         @bind-Value="_variable3"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="0"
                         InitialValue="false"
@@ -76,7 +76,7 @@
                         @bind-Value="_variable4"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="1"
                         InitialValue="false"
