--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -10,7 +10,7 @@ Welcome to your new app.
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="-5"
                         InitialValue="false"
@@ -32,7 +32,7 @@ Welcome to your new app.
                         @bind-Value="_variable2"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="25"
                         InitialValue="false"
@@ -56,7 +56,7 @@ Welcome to your new app.
                         @bind-Value="_variable3"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="0"
                         InitialValue="false"
@@ -77,7 +77,7 @@ Welcome to your new app.
                         @bind-Value="_variable4"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
+                        Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="1"
                         InitialValue="false"
