Calendar icon added on input

--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -10,7 +10,7 @@
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
-                        Disabled="true"
+                        Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="-5"
                         InitialValue="true"
@@ -34,6 +34,7 @@
                         Visible="true"
                         Disabled="false"
                         PickerAlign="Align.Left"
+                        ShowCalendarIcon="false"
                         PickerOffsetTopPositionInPixels="25"
                         InitialValue="false"
                         CalendarType="Calendar.DualModeMiladiDefault"
@@ -56,7 +57,7 @@
                         Name="myInputName"
                         Visible="true"
                         Disabled="false"
-                        PickerAlign="Align.Left"
+                        PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="0"
                         InitialValue="false"
                         CalendarType="Calendar.SingleModeJalali"
