--- a/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
+++ b/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
@@ -5,7 +5,7 @@
            name="@Name"
            readonly="@Disabled"
            style="@Style"
-           class="@_internalCssClass @CssClass"
+           class="@_internalCssClass @_iconCssClass @CssClass"
            placeholder="@Placeholder"
            autocomplete="off"
            maxlength="10"
@@ -19,6 +19,8 @@
 #nullable enable
 
     private string? _internalCssClass;
+
+    private string? _iconCssClass;
 
     public FieldIdentifier FieldIdentifier { get; private set; }
 
@@ -74,6 +76,18 @@
     /// </summary>
     [Parameter]
     public Align PickerAlign { get; set; } = Align.Right;
+
+    /// <summary>
+    /// Show calendar icon on input
+    /// </summary>
+    [Parameter]
+    public bool ShowCalendarIcon { get; set; } = true;
+
+    /// <summary>
+    /// Calendar icon position relative to input
+    /// </summary>
+    [Parameter]
+    public IconPosition CalendarIconPosition { get; set; } = IconPosition.BasedOnAlign;
 
     /// <summary>
     /// Can be used in changing vertical position of picker popup relative to input
@@ -150,6 +164,25 @@
 
         else
             _isJalaliCurrentCalendarType = false;
+
+        if (!ShowCalendarIcon)
+            _iconCssClass = "";
+
+        else
+        {
+            if (CalendarIconPosition == IconPosition.Left)
+                _iconCssClass = "persian-datepicker-left-icon";
+
+            else if (CalendarIconPosition == IconPosition.Right)
+                _iconCssClass = "persian-datepicker-right-icon";
+
+            else
+            {
+                _iconCssClass = PickerAlign == Align.Right
+                    ? "persian-datepicker-left-icon"
+                    : "persian-datepicker-right-icon";
+            }
+        }
 
         if (InitialValue)
         {
