--- a/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
+++ b/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
@@ -2640,3 +2640,22 @@
 }
 
 /*#endregion*/
+
+
+/*#region Input Icon*/
+
+.persian-datepicker-right-icon {
+    background: white url(calendar_icon.png) no-repeat;
+    background-position: calc(100% - 6px) 47%;
+    background-size: 22px 60%;
+    padding-right: 33px;
+}
+
+.persian-datepicker-left-icon {
+    background: white url(calendar_icon.png) no-repeat;
+    background-position: 6px 47%;
+    background-size: 22px 60%;
+    padding-left: 33px;
+}
+
+/*#endregion*/
