--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -10,6 +10,7 @@
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
+                        ReadOnly="false"
                         Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="-5"
@@ -32,7 +33,7 @@
                         @bind-Value="_variable2"
                         Name="myInputName"
                         Visible="true"
-                        Disabled="false"
+                        Disabled="true"
                         PickerAlign="Align.Left"
                         ShowCalendarIcon="false"
                         PickerOffsetTopPositionInPixels="25"
