Fix style issues

--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -10,10 +10,8 @@
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
-                        ReadOnly="false"
-                        Disabled="false"
                         PickerAlign="Align.Right"
-                        PickerOffsetTopPositionInPixels="-5"
+                        PickerOffsetTopPositionInPixels="0"
                         InitialValue="true"
                         CalendarType="Calendar.DualModeJalaliDefault"
                         DigitType="DigitType.BasedOnCalendar"
@@ -21,7 +19,7 @@
                         MinDateSetOnToday="true"
                         Placeholder="Select date"
                         CssClass="form-control"
-                        Style="        border: 1px solid red;
+                        Style="font-family: tahoma;
         margin-left:20px;
         width: 20%;
         float: right
