--- a/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
+++ b/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
@@ -38,7 +38,7 @@
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+.datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-pwt-btn-close {
     cursor: pointer;
 }
 
@@ -368,7 +368,7 @@
     margin-top: 5px;
 }
 
-.datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+.datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-pwt-btn-close {
     background-color: #fafafa;
     background-color: rgba(250, 250, 250, 0.1);
     float: right;
@@ -384,7 +384,7 @@
     min-width: 50px;
 }
 
-.datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .btn-close:hover {
+.datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .pwt-pwt-btn-close:hover {
     background-color: #fafafa;
     background-color: rgba(250, 250, 250, 0.3);
 }
@@ -581,7 +581,7 @@
         box-shadow: 0 5px 10px rgba(0,0,0,0.2)
     }
 
-    .datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-pwt-btn-close {
         cursor: pointer
     }
 
@@ -908,7 +908,7 @@
         margin-top: 5px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-pwt-btn-close {
         background-color: #2d2d2d;
         float: right;
         display: block;
@@ -923,7 +923,7 @@
         min-width: 50px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .btn-close:hover {
+    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .pwt-pwt-btn-close:hover {
         background-color: #393939
     }
 
@@ -1107,7 +1107,7 @@
         box-shadow: none
     }
 
-    .datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-btn-close {
         cursor: pointer
     }
 
@@ -1434,7 +1434,7 @@
         margin-top: 5px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-btn-close {
         background-color: #1a3347;
         float: right;
         display: block;
@@ -1449,7 +1449,7 @@
         min-width: 50px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .btn-close:hover {
+    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .pwt-btn-close:hover {
         background-color: #0095c6
     }
 
@@ -1960,7 +1960,7 @@
         margin-top: 5px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-btn-close {
         background-color: #556270;
         float: right;
         display: block;
@@ -1975,7 +1975,7 @@
         min-width: 50px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .btn-close:hover {
+    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .pwt-btn-close:hover {
         background-color: #393939
     }
 
@@ -2159,7 +2159,7 @@
         box-shadow: 0 5px 10px rgba(0,0,0,0.2)
     }
 
-    .datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .datepicker-day-view .table-days td span, .datepicker-plot-area .datepicker-year-view .year-item, .datepicker-plot-area .datepicker-month-view .month-item, .datepicker-plot-area .datepicker-day-view .table-days td.disabled span, .datepicker-plot-area .datepicker-year-view .year-item-disable, .datepicker-plot-area .datepicker-month-view .month-item-disable, .datepicker-plot-area .datepicker-time-view > .time-segment, .datepicker-plot-area .datepicker-time-view .down-btn, .datepicker-plot-area .datepicker-time-view .up-btn, .datepicker-plot-area .datepicker-time-view input, .datepicker-plot-area .datepicker-navigator .pwt-btn-next, .datepicker-plot-area .datepicker-navigator .pwt-btn-switch, .datepicker-plot-area .datepicker-navigator .pwt-btn-prev, .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-btn-close {
         cursor: pointer
     }
 
@@ -2486,7 +2486,7 @@
         margin-top: 5px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .btn-close {
+    .datepicker-plot-area .toolbox .pwt-btn-submit, .datepicker-plot-area .toolbox .pwt-btn-calendar, .datepicker-plot-area .toolbox .pwt-btn-today, .datepicker-plot-area .toolbox .pwt-btn-close {
         background-color: #222;
         float: right;
         display: block;
@@ -2501,7 +2501,7 @@
         min-width: 50px
     }
 
-    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .btn-close:hover {
+    .datepicker-plot-area .toolbox .pwt-btn-submit:hover, .datepicker-plot-area .toolbox .pwt-btn-calendar:hover, .datepicker-plot-area .toolbox .pwt-btn-today:hover, .datepicker-plot-area .toolbox .pwt-btn-close:hover {
         background-color: #393939
     }
 
