Add clear button on input (#44)

--- a/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
+++ b/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
@@ -1,7 +1,7 @@
-﻿
-@if (Visible)
+﻿@if (Visible)
 {
-    <input id="@Id"
+    <div class="wrapper">
+        <input id="@Id"
            name="@Name"
            readonly="@ReadOnly"
            disabled="@Disabled"
@@ -12,16 +12,20 @@
            maxlength="10"
            value="@Value"
            @onchange="@Change" />
+        <span class="@_clearBtnCssClass" onclick="clearInput(@Id)">×</span>
+    </div>
 }
 
 
 @code
 {
-#nullable enable
+    #nullable enable
 
     private string? _internalCssClass;
 
     private string? _iconCssClass;
+
+    private string? _clearBtnCssClass;
 
     public FieldIdentifier FieldIdentifier { get; private set; }
 
@@ -129,7 +133,7 @@
     [Parameter]
     public string? Placeholder { get; set; }
 
-     /// <summary>
+    /// <summary>
     /// Set datepicker readonly
     /// </summary>
     [Parameter]
@@ -173,22 +177,50 @@
             _isJalaliCurrentCalendarType = false;
 
         if (!ShowCalendarIcon)
+        {
             _iconCssClass = "";
+
+            if (_isJalaliCurrentCalendarType)
+            {
+                _clearBtnCssClass = "clear-btn left";
+            }
+            else
+            {
+                _clearBtnCssClass = "clear-btn right";
+            }
+
+            Console.WriteLine(_clearBtnCssClass + "1");
+        }
 
         else
         {
             if (CalendarIconPosition == IconPosition.Left)
+            {
                 _iconCssClass = "persian-datepicker-left-icon";
+                _clearBtnCssClass = "clear-btn right";
+            }
 
             else if (CalendarIconPosition == IconPosition.Right)
+            {
                 _iconCssClass = "persian-datepicker-right-icon";
+                _clearBtnCssClass = "clear-btn left";
+            }
 
             else
             {
-                _iconCssClass = PickerAlign == Align.Right
-                    ? "persian-datepicker-left-icon"
-                    : "persian-datepicker-right-icon";
+                if (PickerAlign == Align.Right)
+                {
+                    _iconCssClass = "persian-datepicker-left-icon";
+                    _clearBtnCssClass = "clear-btn left";
+                }
+                else
+                {
+                    _iconCssClass = "persian-datepicker-right-icon";
+                    _clearBtnCssClass = "clear-btn right";
+                }
             }
+
+            Console.WriteLine(_clearBtnCssClass + "2");
         }
 
         if (InitialValue)
