--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -13,6 +13,7 @@
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="0"
                         InitialValue="true"
+                        ShowCalendarIcon="true"
                         CalendarType="Calendar.DualModeJalaliDefault"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
@@ -25,69 +26,6 @@
         float: right
 "
                         Theme="PickerTheme.Default"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
-
-<InputPersianDatePicker Id="myInputDatePicker2"
-                        @bind-Value="_variable2"
-                        Name="myInputName"
-                        Visible="true"
-                        Disabled="true"
-                        PickerAlign="Align.Left"
-                        ShowCalendarIcon="false"
-                        PickerOffsetTopPositionInPixels="25"
-                        InitialValue="false"
-                        CalendarType="Calendar.DualModeMiladiDefault"
-                        DigitType="DigitType.BasedOnCalendar"
-                        DateFormat="DateFormat.yyyy_dash_MM_dash_dd"
-                        MinDateSetOnToday="true"
-                        Placeholder="Select date"
-                        CssClass="form-control"
-                        Style="        border: 1px solid purple;
-
-                                         margin-left:20px;
-
-        width: 20%;
-        float: right"
-                        Theme="PickerTheme.Blue"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
-
-<InputPersianDatePicker Id="myInputDatePicker3"
-                        @bind-Value="_variable3"
-                        Name="myInputName"
-                        Visible="true"
-                        Disabled="false"
-                        PickerAlign="Align.Right"
-                        PickerOffsetTopPositionInPixels="0"
-                        InitialValue="false"
-                        CalendarType="Calendar.SingleModeJalali"
-                        DigitType="DigitType.BasedOnCalendar"
-                        DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
-                        MinDateSetOnToday="true"
-                        Placeholder="انتخاب تاریخ"
-                        CssClass="form-control"
-                        Style="  text-align: right;      border: 1px solid blue;
-        margin-left: 20px;
-        width: 20%;
-        float: right"
-                        Theme="PickerTheme.Cheerup"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
-
-<InputPersianDatePicker Id="myInputDatePicker4"
-                        @bind-Value="_variable4"
-                        Name="myInputName"
-                        Visible="true"
-                        Disabled="false"
-                        PickerAlign="Align.Right"
-                        PickerOffsetTopPositionInPixels="1"
-                        InitialValue="false"
-                        CalendarType="Calendar.SingleModeMiladi"
-                        DigitType="DigitType.BasedOnCalendar"
-                        DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
-                        MinDateSetOnToday="true"
-                        Placeholder="Select date"
-                        CssClass="form-control"
-                        Style="border:1px solid green; width:20%; float:right"
-                        Theme="PickerTheme.RedBlack"
                         OnChange="@(() => Console.WriteLine("OK"))" />
 
 
