Fix issue on position of clear button (#49)

--- a/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
+++ b/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
@@ -2650,7 +2650,7 @@
     background: white url(calendar_icon.png) no-repeat;
     background-position: calc(100% - 6px) 49%;
     background-size: 22px 60%;
-    padding-right: 33px;
+    padding: 0 33px 0 28px;
 }
 
 .persian-datepicker-left-icon {
