--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -24,7 +24,8 @@
         width: 20%;
         float: right"
                         Theme="PickerTheme.Default"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        OnChange="@(() => Console.WriteLine("OK1"))" 
+                        OnClear="@(() => Console.WriteLine("Clear1"))" />
 
 <InputPersianDatePicker Id="myInputDatePicker2"
                         @bind-Value="_variable2"
@@ -46,7 +47,7 @@
         width: 20%;
         float: right"
                         Theme="PickerTheme.Blue"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        OnChange="@(() => Console.WriteLine("OK2"))" />
 
 <InputPersianDatePicker Id="myInputDatePicker3"
                         @bind-Value="_variable3"
@@ -68,7 +69,7 @@
         width: 20%;
         float: right"
                         Theme="PickerTheme.Cheerup"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        OnChange="@(() => Console.WriteLine("OK3"))" />
 
 <InputPersianDatePicker Id="myInputDatePicker4"
                         @bind-Value="_variable4"
@@ -86,7 +87,7 @@
                         CssClass="form-control"
                         Style="border:1px solid green; width:20%; float:right"
                         Theme="PickerTheme.RedBlack"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        OnChange="@(() => Console.WriteLine("OK4"))" />
 
 @*<label style="float: right; font-size: 25px; font-weight:bold"> @_myComponentPrivateField </label>*@
 
