--- a/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
+++ b/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
@@ -1,4 +1,5 @@
-﻿@if (Visible)
+﻿@using System.ComponentModel.DataAnnotations
+@if (Visible)
 {
     <div class="datepicker_wrapp" style="@Style">
         <input id="@Id"
@@ -54,7 +55,7 @@
     /// <summary>
     /// Html input element id attribute (Required)
     /// </summary>
-    [Parameter]
+    [Parameter, Required]
     public string? Id { get; set; }
 
     /// <summary>
