Fix the init issue when we have initial date for picker set dynamically #60 + Up to 3.2.0

--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -13,7 +13,7 @@ Welcome to your new app.
                         Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="-5"
-                        InitialValue="false"
+                        InitialValueSetOnToday="false"
                         CalendarType="Calendar.DualModeJalaliDefault"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
@@ -35,7 +35,7 @@ Welcome to your new app.
                         Disabled="false"
                         PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="25"
-                        InitialValue="false"
+                        InitialValueSetOnToday="false"
                         CalendarType="Calendar.DualModeMiladiDefault"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_dash_MM_dash_dd"
@@ -59,7 +59,7 @@ Welcome to your new app.
                         Disabled="false"
                         PickerAlign="Align.Left"
                         PickerOffsetTopPositionInPixels="0"
-                        InitialValue="false"
+                        InitialValueSetOnToday="false"
                         CalendarType="Calendar.SingleModeJalali"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
@@ -80,7 +80,7 @@ Welcome to your new app.
                         Disabled="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="1"
-                        InitialValue="false"
+                        InitialValueSetOnToday="false"
                         CalendarType="Calendar.SingleModeMiladi"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
